<resources>
    <string name="app_name">DesingScreens</string>
    <string name="checkout">Checkout</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="total">Total Price</string>
    <string name="white_shirt">White Shirt</string>
    <string name="nike_sneakers">Nike Sneakers</string>
    <string name="simple_tshirt">Simple T-Shirt</string>
    <string name="black_cap">Black Cap</string>
    <string name="value">$ 456.94</string>
    <string name="value2">$ 25.00</string>
    <string name="value3">$ 18.33</string>
    <string name="value4">$ 3.99</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="list_title">List</string>
    <string name="list_string_1">The quick brown fox jumps over the lazy dog</string>
    <string name="list_string_time">Today, 1:45 PM</string>
    <string name="popular_news_title">Popular news</string>
    <string name="posted">Posted on⠀</string>
    <string name="date_string"> February 11th</string>
    <string name="lorem">Lorem Ipsum has been the industry’s standard dummy text</string>
    <string name="signup_title">Sign Up</string>
    <string name="market">Material Design UI Kit</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="passwd">Password</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="already">ALLREADY HAVE AN ACCOUNT?⠀</string>
    <string name="login">LOG IN!</string>
</resources>
