<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_coral_barbie_pink">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="46dp"
            android:src="@drawable/menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/roboto_md"
            android:text="@string/signup_title"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <TextView
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        android:textSize="36sp"
        android:fontFamily="@font/roboto_lt"
        android:textColor="@color/white"/>
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/market"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_lt"
        android:textColor="@color/white"/>

    <EditText
        android:layout_marginTop="65dp"
        android:layout_marginHorizontal="40dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="@color/white"
        android:fontFamily="@font/roboto_lt"
        android:textSize="12sp"
        android:textColor="@color/warm_grey"
        android:inputType="text"/>
    <View
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/pale_grey_two"
        />

    <EditText
        android:layout_marginHorizontal="40dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@color/white"
        android:fontFamily="@font/roboto_lt"
        android:textSize="12sp"
        android:textColor="@color/warm_grey"
        android:inputType="textEmailAddress"/>
    <View
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/pale_grey_two"
        />

    <EditText
        android:layout_marginHorizontal="40dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwd"
        android:background="@color/white"
        android:fontFamily="@font/roboto_lt"
        android:textSize="12sp"
        android:textColor="@color/warm_grey"
        android:inputType="textPassword"/>
    <View
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/pale_grey_two"
        />

    <LinearLayout
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pale_grey_two"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:layout_marginRight="1dp">

            <EditText
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:background="@color/white"
                android:fontFamily="@font/roboto_lt"
                android:textSize="12sp"
                android:textColor="@color/warm_grey"
                android:inputType="text"/>
            <ImageView
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shape"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:background="@color/white"
            android:layout_marginRight="1dp"
            >

        <EditText
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:background="@color/white"
            android:fontFamily="@font/roboto_lt"
            android:textSize="12sp"
            android:textColor="@color/warm_grey"
            android:inputType="text"/>
            <ImageView
                android:layout_gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shape"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_white"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/signup_title"
        android:fontFamily="@font/roboto_md"
        android:textColor="@color/coral"
        android:textSize="14sp"
        android:padding="20dp"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already"
            android:fontFamily="@font/roboto_lt"
            android:textSize="12sp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/roboto_lt"
            android:textSize="12sp"
            android:textColor="@color/white"
            />

    </LinearLayout>

</LinearLayout>