<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_coral_barbie_pink">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="46dp"
            android:src="@drawable/menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/roboto_md"
            android:text="@string/popular_news_title"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <View
        android:layout_width="10dp"
        android:layout_height="380dp"
        android:layout_centerVertical="true"
        android:background="@color/fake_white"
        android:layout_marginLeft="25dp"/>

    <View
        android:layout_width="10dp"
        android:layout_height="380dp"
        android:layout_centerVertical="true"
        android:background="@color/fake_white"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/main_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:layout_marginHorizontal="35dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:scaleType="centerCrop"
            android:src="@drawable/material_image_1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/list_string_1"
            android:fontFamily="@font/roboto_lt"
            android:textSize="26sp"
            android:textColor="@color/coral"
            android:gravity="center"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posted"
                android:textColor="@color/warm_grey"
                android:fontFamily="@font/roboto_lt"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_string"
                android:textColor="@color/coral"
                android:fontFamily="@font/roboto_lt"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/like"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:textSize="12sp"
                    android:textColor="@color/warm_grey"
                    android:fontFamily="@font/roboto_lt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="324"/>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/comments"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:textSize="12sp"
                    android:textColor="@color/warm_grey"
                    android:fontFamily="@font/roboto_lt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="43"/>

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_marginVertical="14dp"
            android:layout_marginHorizontal="40dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:textColor="@color/warm_grey"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_lt"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginVertical="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_card"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rectangle_4"
            android:layout_margin="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rectangle_4"
            android:layout_margin="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rectangle_4"
            android:layout_margin="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rectangle_4"
            android:layout_margin="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rectangle_4"
            android:layout_margin="10dp"/>

    </LinearLayout>

</RelativeLayout>